# federated-government-statistics

./: .gitignore  CMakeLists.txt  README.md  aggregate_format.json  docker-compose.yml  queryTest  queryTest.cpp
config/: buckets.json  coordinator_config.json  coordinator_config.md  nodes.txt
data generation/: generator.py
data-generation/: README.md  generator.py  generator_config.json  performance_report.py
init-templates/schema_a/: 01.schema.sql  02_load.sql
init-templates/schema_b/: 01.schema.sql  02_load.sql
init-templates/schema_c/: 01.schema.sql  02_load.sql
init/medium1/: 01.schema.sql  02_load.sql  person_record.csv
init/medium2/: 01.schema.sql  02_load.sql  person_record.csv
init/metro/: 01.schema.sql  02_load.sql  address.csv  household.csv
init/rural1/: 01.schema.sql  02_load.sql  citizen.csv
init/rural2/: 01.schema.sql  02_load.sql  citizen.csv
oldsrc/: aggregate.cpp  aggregate.hpp  contract.cpp  contract.hpp  db.cpp  db.hpp  json_aggregator.cpp  json_aggregator.hpp  main.cpp  mpi_util.hpp  schema_detect.cpp  schema_detect.hpp  serialize.cpp  serialize.hpp  types.hpp
oldsrc/adapters/: adapter.hpp  schema_a.cpp  schema_b.cpp  schema_c.cpp
queries/: registry.json
queries/templates/schema_a/: _common.sql  age.sql  demographics.sql  income.sql  population.sql  unemployment.sql
queries/templates/schema_b/: age.sql  demographics.sql  income.sql  population.sql  unemployment.sql
queries/templates/schema_c/: age.sql  demographics.sql  income.sql  population.sql  unemployment.sql
src/: main.cpp
src/common/: config.cpp  config.hpp  json.hpp  logging.hpp  metrics.cpp  metrics.hpp  mpi_codec.cpp  mpi_codec.hpp  strings.hpp  time.hpp
src/coordinator/: coordinator.cpp  coordinator.hpp  report_writer.cpp  report_writer.hpp
src/db/: pg_client.cpp  pg_client.hpp  sql_template.cpp  sql_template.hpp
src/worker/: discovery.cpp  discovery.hpp  executor.cpp  executor.hpp  worker.cpp  worker.hpp
